<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mainViewSpectacle">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/haut"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">


        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/image_thumb"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="clickThumb"
            android:padding="10px"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/image_thumb"
            android:gravity="center"
            android:padding="10px"
            android:text="@string/title" />

    </RelativeLayout>


    <ScrollView
        android:id="@+id/milieu"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@+id/bas"
        android:layout_below="@+id/haut">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/field_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/address" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="clickAddress"
                android:padding="10px"
                android:text="@string/d_address" />


            <TextView
                android:id="@+id/field_timetable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="clickTimeTable"
                android:padding="10px"
                android:text="@string/timetable" />

            <TextView
                android:id="@+id/timetable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/d_timetable" />

            <TextView
                android:id="@+id/field_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/tags" />

            <TextView
                android:id="@+id/field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/d_tags" />

            <TextView
                android:id="@+id/field_pricing_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/pricing_info" />

            <TextView
                android:id="@+id/fpricing_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/d_pricing_info" />

            <TextView
                android:id="@+id/field_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/description" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="clickDescription"
                android:padding="10px"
                android:text="@string/d_description" />


            <TextView
                android:id="@+id/field_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10px"
                android:text="@string/link" />

            <TextView
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:onClick="clickLink"
                android:padding="10px"
                android:text="@string/d_link" />


        </LinearLayout>


    </ScrollView>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <View android:id="@+id/strutv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/buttonAnnulerVS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/strutv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/buttonAjouter"
            android:text="@string/RevenirRésultats"/>


        <Button
            android:id="@+id/buttonAjouter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/strutv"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:text="@string/AjouterSpectacle" />

    </RelativeLayout>
</RelativeLayout>